configure db connection

--- a/UrlClicks.WebAPI/appsettings.json
+++ b/UrlClicks.WebAPI/appsettings.json
@@ -9,6 +9,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UrlClickDbConnection": "Data Source=wechatifydevelopments.database.windows.net;Initial Catalog=UrlClicksStg;User ID=WeChatify;Password=W3(#@t!F^B0t"
+    "UrlClickDbConnection": "Data Source=urlclicks.database.windows.net;Initial Catalog=UrlClicksStg;User ID=WeChatify;Password=%&^%*&"
   }
 }
