--- a/UrlClicks.WebAPI/appsettings.json
+++ b/UrlClicks.WebAPI/appsettings.json
@@ -1,5 +1,11 @@
 {
   "Logging": {
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Warning",
+        "Microsoft": "Error"
+      }
+    },
     "LogLevel": {
       "Default": "Warning"
     }
