--- a/UrlClicks.Infrastructure/UrlClicks.Infrastructure.csproj
+++ b/UrlClicks.Infrastructure/UrlClicks.Infrastructure.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Pathoschild.Http.FluentClient" Version="3.3.1" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
 
 </Project>
