--- a/UrlClicks.Infrastructure/UrlClicks.Infrastructure.csproj
+++ b/UrlClicks.Infrastructure/UrlClicks.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UrlClicks.Domain\UrlClicks.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
